fix color of navbar on small screens

--- a/_includes/css/sotm.css
+++ b/_includes/css/sotm.css
@@ -83,6 +83,13 @@ div.affix {
     color: {{ site.color.links }};
 }
 
+
+@media(max-width:767px) {
+    .navbar, .navbar a, .navbar a:hover {
+        color: {{ site.color.links }};
+    }
+}
+
 nav a, .nav a {
     text-decoration: none;
     font-weight: 500;
